8157686: JavaFX WebView fails to track URL changes for PJAX websites

Reviewed-by: arajkumar, mbilla