modules/javafx.web/src/main/java/com/sun/webkit/LoadListenerClient.java
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2011, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2011, 2017, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -31,6 +31,7 @@ public interface LoadListenerClient {
     @Native public final static int PAGE_STARTED = 0;
     @Native public final static int PAGE_FINISHED = 1;
     @Native public final static int PAGE_REDIRECTED = 2;
+    @Native public final static int PAGE_REPLACED = 3;
     @Native public final static int LOAD_FAILED = 5;
     @Native public final static int LOAD_STOPPED = 6;
     @Native public final static int CONTENT_RECEIVED = 10;
